--- a/apps/backend/modules/profile/config/view.yml
+++ b/apps/backend/modules/profile/config/view.yml
@@ -1,5 +1,6 @@
 all:
-  stylesheets:    [profile.css, discussion.css]
+  stylesheets:    [profile.css, discussion.css, jquery.jcrop.css]
+  javascripts:    [jquery.jcrop.min.js, jquery.color.js]
   
 newSuccess:
   has_layout:     false
