Modified the academic info and personal info modules

--- a/apps/backend/modules/academic_info/config/view.yml
+++ b/apps/backend/modules/academic_info/config/view.yml
@@ -1,8 +1,2 @@
-indexSuccess:
-  stylesheets: [*, academics.css]
-
-showSuccess:
-  layout: false
-  
-editSuccess:
-  layout: false
+all:
+  has_layout: false
