--- a/apps/backend/config/routing.yml
+++ b/apps/backend/config/routing.yml
@@ -636,6 +636,14 @@ course:
     prefix_path:          /course
     column:               id
     with_wildcard_routes: true
+    
+course_show:
+  url:     /course/:slug
+  class:   sfDoctrineRoute
+  options: { model: Course, type: object }
+  param:   { module: course, action: show }
+  requirements:
+    sf_method: [get]
 
 department:
   class: sfDoctrineRouteCollection
@@ -904,6 +912,14 @@ academics_student:
 academics_instructor:
   url: /instructor_details
   param: { module: instructor, action: details }
+    
+profile_show:
+  url:     /profile/:slug
+  class:   sfDoctrineRoute
+  options: { model: sfGuardUser, type: object }
+  param:   { module: profile, action: show }
+  requirements:
+    sf_method: [get]
   
 profile_student_details:
   url: /profile_student_details
@@ -937,9 +953,9 @@ profile_qualifications:
   url: /profile_qualifications
   param: { module: achievement, action: qualifications }
   
-profile_wall:
-  url: /profile_wall
-  param: { module: discussion_topic, action: wall }
+profile_timeline:
+  url: /profile_timeline
+  param: { module: discussion_topic, action: timeline }
   
 profile_peers:
   url: /profile_peers
@@ -1165,6 +1181,14 @@ assignment_detail:
 assignment_course:
   url:   /assignment/course
   param: { module: assignment, action: myCourse }
+    
+assignment_show:
+  url:     /assignment/:slug
+  class:   sfDoctrineRoute
+  options: { model: Assignment, type: object }
+  param:   { module: assignment, action: show }
+  requirements:
+    sf_method: [get]
   
 course_bulletin_board_post:
   url:   /course/bulletin_board_post
@@ -1395,6 +1419,22 @@ file_system:
 course_home:
   url:   /course/info
   param: { module: course, action: info }
+    
+discussion_show:
+  url:     /discusion/:slug
+  class:   sfDoctrineRoute
+  options: { model: Discusion, type: object }
+  param:   { module: discusion, action: show }
+  requirements:
+    sf_method: [get]
+    
+discussion_topic_show:
+  url:     /discussion_topic/:slug
+  class:   sfDoctrineRoute
+  options: { model: DiscusionTopic, type: object }
+  param:   { module: discussion_topic, action: show }
+  requirements:
+    sf_method: [get]
   
 discussion_home:
   url: /discussion
@@ -1419,10 +1459,26 @@ discussion_topic_message_show_mini:
 recent_announcement:
   url:   /announcement/recent
   param: { module: announcement, action: recent }
+    
+announcement_show:
+  url:     /announcement/:slug
+  class:   sfDoctrineRoute
+  options: { model: Announcement, type: object }
+  param:   { module: announcement, action: show }
+  requirements:
+    sf_method: [get]
   
 recent_news:
   url:   /news/recent
   param: { module: news, action: recent }
+    
+news_show:
+  url:     /news/:slug
+  class:   sfDoctrineRoute
+  options: { model: News, type: object }
+  param:   { module: news, action: show }
+  requirements:
+    sf_method: [get]
   
 dashboard_events:
   url:   /dashboard_events
