--- a/apps/backend/modules/message_inbox/config/view.yml
+++ b/apps/backend/modules/message_inbox/config/view.yml
@@ -1,5 +1,5 @@
 all:
-  stylesheets: [/sfFormExtraPlugin/css/jquery.autocompleter.css, email_message.css]
+  stylesheets: [/sfFormExtraPlugin/css/jquery.autocompleter.css, email_message.css, profile.css, course.css]
   javascripts: [/sfFormExtraPlugin/js/jquery.autocompleter.js]
 
 newSuccess:
