--- a/apps/backend/modules/dashboard/config/view.yml
+++ b/apps/backend/modules/dashboard/config/view.yml
@@ -1,14 +1,2 @@
 all:
-  stylesheets: [dashboard, announcement, news]
-
-newSuccess:
-  layout: false
-  
-editSuccess:
-  layout: false
-  
-detailSuccess:
-  layout: false
-  
-tabSuccess:
-  layout: false
+  stylesheets: [dashboard]
