--- a/apps/backend/config/routing.yml
+++ b/apps/backend/config/routing.yml
@@ -1670,7 +1670,7 @@ dropout:
 # default rules
 homepage:
   url:   /
-  param: { module: course, action: index }
+  param: { module: dashboard, action: index }
 
 # generic rules
 # please, remove them by adding more specific rules  
