--- a/apps/backend/config/view.yml
+++ b/apps/backend/config/view.yml
@@ -11,8 +11,8 @@ default:
     #language:     en
     #robots:       index, follow
     
-  stylesheets:    [elements.css, tutorplus.css, left-menu.css, form.css, symfony.css, jquery-ui.css, jquery-date-picker.css, /tiny_mce/themes/simple/skins/default/ui.css, colorbox/jquery.colorbox.css]
-  javascripts:    [jquery-1.6.2.min.js, jquery.form.js, jquery/jquery.validate.min.js, /tiny_mce/tiny_mce.js, tutorplus.js, jquery.treeview.js, jquery.number_format.js, jquery.validate.numeric.js, jquery-ui.min.js, jquery.elastic.js, jquery.colorbox-min.js]
+  stylesheets:    [fonts.css, elements.css, tutorplus.css, left-menu.css, form.css, symfony.css, jquery-ui.css, jquery-date-picker.css, /tiny_mce/themes/simple/skins/default/ui.css, colorbox/jquery.colorbox.css]
+  javascripts:    [jquery-1.6.2.min.js, jquery.form.js, jquery/jquery.autosize-min.js, tutorplus.js, jquery/jquery.validate.min.js, jquery.colorbox-min.js]
 
   has_layout:     true
   layout:         layout
