--- a/apps/backend/modules/course_announcement/config/generator.yml
+++ b/apps/backend/modules/course_announcement/config/generator.yml
@@ -7,7 +7,7 @@ generator:
     with_show:             false
     singular:              ~
     plural:                ~
-    route_prefix:          course_announcement
+    route_prefix:          course_zzannouncement
     with_doctrine_route:   true
     actions_base_class:    sfActions
 
