--- a/apps/frontend/config/view.yml
+++ b/apps/frontend/config/view.yml
@@ -11,8 +11,8 @@ default:
     #language:     en
     #robots:       index, follow
 
-  stylesheets:    [elements.css, tutorplus.css, left-menu.css, form.css, symfony.css, colorbox/jquery.colorbox.css]
-  javascripts:    [jquery-1.6.2.min.js, jquery.form.js, jquery/jquery.validate.min.js, tutorplus.js, jquery.elastic.js, jquery.colorbox-min.js]
+  stylesheets:    [fonts.css, elements.css, tutorplus.css, left-menu.css, form.css, symfony.css, colorbox/jquery.colorbox.css]
+  javascripts:    [jquery-1.6.2.min.js, jquery.form.js, jquery/jquery.autosize-min.js, tutorplus.js, jquery/jquery.validate.min.js, jquery.colorbox-min.js]
 
   has_layout:     true
   layout:         layout
