--- a/apps/backend/modules/program_level/config/generator.yml
+++ b/apps/backend/modules/program_level/config/generator.yml
@@ -1,30 +1,29 @@
 generator:
   class: sfDoctrineGenerator
   param:
-    model_class:           AcademicPeriod
+    model_class:           ProgramLevel
     theme:                 ecollegeplus
     non_verbose_templates: true
     with_show:             false
     singular:              ~
     plural:                ~
-    route_prefix:          academic_period
+    route_prefix:          program_level
     with_doctrine_route:   true
     actions_base_class:    sfActions
 
     config:
       actions: ~
       fields:
-        period:            { label: Period }
       filter:
         class: false
       list:
-        title:             Academic Periods
-        display:           [ academic_year, name, period, grades_due]
-        sort:              [ name, start_date, end_date, asc ]
+        title:             Program Levels
+        display:           [ name ]
+        sort:              [ name, asc ]
         batch_actions:     [ ]
-        max_per_page:      10 
+        max_per_page:			 10
         actions:
-          _new: ~
+          _new:              ~
       edit:
         actions:
           cancel:            []
